feat(client): add prism and marked to screen

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,6 +8,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <link href="prism.css" rel="stylesheet" />
     <title>freeCodeCamp: Intern Node</title>
   </head>
   <body>
