--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,6 +9,7 @@
       content="Web site created using create-react-app"
     />
     <link href="prism.css" rel="stylesheet" />
+    <link rel="icon" href="favicon-32x32.png" type="image/png" />
     <title>freeCodeCamp: Intern Node</title>
   </head>
   <body>
